Wine quality correlations

--- a/src/templates/dashboard.html
+++ b/src/templates/dashboard.html
@@ -13,6 +13,7 @@ Select an option below:
 </p>
 <ul>
 	<li><a href="/register">Register a new user</a></li>
+	<li><a href="/correlation">Test Associations of Wine Characteristics</a></li>
 	<li><a href="/logout">Logout</a></li>
 </ul>
 </form>
