Associations and linear regression

--- a/src/templates/associate.html
+++ b/src/templates/associate.html
@@ -18,10 +18,10 @@ To get started, please select a wine type and a wine characteristic.
 <div class="error-message">{{ errorMessage }}</div>
 <form method="POST" action="/correlation">
 <p>Wine Types:</p>
-	<input type="radio" name="wine_type" value="red" id="red"> <label for="red">Red</label><br>
+	<input type="radio" name="wine_type" value="red" id="red" checked="checked"> <label for="red">Red</label><br>
 	<input type="radio" name="wine_type" value="white" id="white"> <label for="white">White</label><br>
 <p>Characteristic:</p>
-	<input type="radio" name="wine_characteristic" value="volatile acidity" id="volatile_acidity"> <label for="volatile_acidity">Volatile Acidity</label><br>
+	<input type="radio" name="wine_characteristic" value="volatile acidity" id="volatile_acidity" checked="checked"> <label for="volatile_acidity">Volatile Acidity</label><br>
 	<input type="radio" name="wine_characteristic" value="fixed acidity" id="fixed_acidity"> <label for="fixed_acidity">Fixed Acidity</label><br>
 	<input type="radio" name="wine_characteristic" value="alcohol" id="alcohol"> <label for="alcohol">Alcohol Percent</label><br>
 	<input type="radio" name="wine_characteristic" value="residual sugar" id="residual_sugar"> <label for="residual_sugar">Residual Sugar</label><br>
