Finish requirement 4. Frequency of wine characteristics and their associated wine qualities

--- a/src/templates/association-graph.html
+++ b/src/templates/association-graph.html
@@ -11,6 +11,7 @@
 </head>
 
 <body>
+{% include 'header.html' %}
 <p style="text-align:center">{{ results }}</p>
 
   <div id="scatter" style="max-width:100%;width:700px;margin:0 auto"><!-- Plotly chart will be drawn inside this DIV --></div>
