--- a/src/templates/dashboard.html
+++ b/src/templates/dashboard.html
@@ -14,6 +14,7 @@ Select an option below:
 <ul>
 	<li><a href="/register">Register a new user</a></li>
 	<li><a href="/correlation">Test Associations of Wine Characteristics</a></li>
+	<li><a href="/frequency">Test Frequency of Wine Characteristic Values</a></li>
 	<li><a href="/logout">Logout</a></li>
 </ul>
 </form>
