--- a/src/templates/register.html
+++ b/src/templates/register.html
@@ -11,6 +11,8 @@
 </head>
 
 <body>
+{% include 'header.html' %}
+
 <h1>Register a New User</h1>
 <div class="error-message">{{ errorMessage }}</div>
 <form method="POST" action="/register">
