Add extra association checks

--- a/src/templates/associate.html
+++ b/src/templates/associate.html
@@ -26,6 +26,9 @@ To get started, please select a wine type and a wine characteristic.
 	<input type="radio" name="wine_characteristic" value="fixed acidity" id="fixed_acidity"> <label for="fixed_acidity">Fixed Acidity</label><br>
 	<input type="radio" name="wine_characteristic" value="alcohol" id="alcohol"> <label for="alcohol">Alcohol Percent</label><br>
 	<input type="radio" name="wine_characteristic" value="residual sugar" id="residual_sugar"> <label for="residual_sugar">Residual Sugar</label><br>
+	<input type="radio" name="wine_characteristic" value="citric acid" id="citric_acid"> <label for="citric_acid">Citric Acid</label><br>
+	<input type="radio" name="wine_characteristic" value="chlorides" id="chloride"> <label for="chloride">Chlorides</label><br>
+	<input type="radio" name="wine_characteristic" value="density" id="density"> <label for="density">Density</label><br>
 <br>
 <input type="submit" name="submit" value="Check Association">
 </form>
