--- a/src/templates/login.html
+++ b/src/templates/login.html
@@ -5,14 +5,25 @@
 
 </head>
 
-<body>
-<h1>Login to Get Started</h1>
-<form method="POST" action="/login">
-Email: <input type="text" name="email">
-<br>
-Password: <input type="password" name="password">
-<br>
-<input type="submit" name="submit" value="Login">
-</form>
+<body class="bg-light">
+<div class="card" style="width:450px;max-width:95%;margin:0 auto;margin-top:100px;">
+	<div class="card-body">
+		<div>
+		<h4 style="font-family:'Dancing Script'" class="text-center">Le Vin Coupé</h4>
+		<h2 style="margin-bottom:30px;text-align: center">Login to Get Started</h2>
+		<form method="POST" action="/login">
+		<div class="row" style="margin-bottom:15px;">
+			<div class="col-sm-12"><input type="text" name="email" style="width:100%;padding:7px" placeholder="Email Address"></div>
+		</div>
+		<div class="row">
+			<div class="col-sm-12"><input type="password" name="password" style="width:100%;padding:7px" placeholder="Password"></div>
+		</div>
+		<br>
+		<button type="submit" name="submit" class="btn btn-primary" style="width:100%;padding:10px">Login</button>
+		</form>
+		</div>
+	</div>
+</div>
+
 </body>
 </html>
