--- a/src/templates/dashboard.html
+++ b/src/templates/dashboard.html
@@ -1,10 +1,16 @@
 <!doctype html>
 <head>
 <title>Le Vin Coupe</title>
+{% include 'header-code.html' %}
+
 </head>
 
 <body>
-<h1>Employee Dashboard</h1>
+{% with active="dashboard" %}
+	{% include 'nav.html' %}
+{% endwith %}
+<div class="container content" style="border:1px solid #ddd; border-top:none;">
+<h1 class="pt-4">Employee Dashboard</h1>
 <p>
 Hello, {{ firstName }}
 </p>
@@ -17,6 +23,9 @@ Select an option below:
 	<li><a href="/frequency">Test Frequency of Wine Characteristic Values</a></li>
 	<li><a href="/logout">Logout</a></li>
 </ul>
-</form>
+</div>
+<script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.3/umd/popper.min.js" integrity="sha384-vFJXuSJphROIrBnz7yo7oB41mKfc8JzQZiCq4NCceLEaO4IHwicKwpJf9c9IpFgh" crossorigin="anonymous"></script>
+<script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta.2/js/bootstrap.min.js" integrity="sha384-alpBpkh1PFOepccYVYDB4do5UnbKysX5WZXm3XxPqe5iKTfUKjNkCk9SaVuEZflJ" crossorigin="anonymous"></script>
 </body>
 </html>
