--- a/src/templates/nav.html
+++ b/src/templates/nav.html
@@ -7,7 +7,7 @@
 			<a class="nav-link dropdown-toggle {% if active == "user" %}active{% endif %}" data-toggle="dropdown" href="#" role="button" aria-haspopup="true" aria-expanded="false">User</a>
 			<div class="dropdown-menu">
 			  <a class="dropdown-item" href="/register">Register New</a>
-			  <a class="dropdown-item" href="#">User List</a>
+			  <a class="dropdown-item" href="/users">User List</a>
 			</div>
 		</li>
 		<li class="nav-item dropdown">
