--- a/src/templates/nav.html
+++ b/src/templates/nav.html
@@ -1,3 +1,6 @@
+<div class="container mt-4">
+	<a href="/"><h4 style="font-family:'Dancing Script'" class="text-left">Le Vin Coupé</h4></a>
+</div>
 <div class="container mt-4" style="padding-left:0;padding-right:0"> 
 	<ul class="nav nav-tabs">
 		<li class="nav-item">
